# epl-prediction

./: README.md  app.js  index.html  pyproject.toml  styles.css
models/: logistic_regression_no_odds.pkl  logistic_regression_with_odds.pkl  xgboost_no_odds.pkl  xgboost_with_odds.pkl
outputs/: actual_standings.csv  predicted_standings.csv  processed_epl_data.csv  standings_comparison.csv  training.csv  validation.csv  validation_epl_data.csv
report/: main.typ
src/: exploration.py  learn.py  plots.py  preprocessing.py  standings.py
